# torch-fast-box-ops

./: LICENSE  README.md  pyproject.toml  setup.py
benchmark/: box_conversion.py  box_iou.py
notebook/: other.ipynb
test/: test_box_convert.py  test_box_iou.py  utils.py
torch_fast_box_ops/: CMakeLists.txt  CPM.cmake  __init__.py  box_convert.cpp  box_convert.cu  boxes.cuh  boxes.hpp  common.cpp  common.hpp  iou.cpp  iou.cu  iou_common.cuh  iou_loss.cu  kernel.cuh  profile.cpp
