[build-system]
requires = ["setuptools", "torch"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[project]
name = "torch-fast-box-ops"
version = "0.0.3"
description = "Pytorch Faster Box Operations"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bryce Ferenczi", email = "frenzi@hotmail.com.au" }]
license = { file = "LICENSE" }
dependencies = ["torch>=2.4.0"]
